full complete mobile responsive website

--- a/index.html
+++ b/index.html
@@ -27,8 +27,29 @@
             <div class="org_pmrybtn">
                 <button>Contact</button>
             </div>
+            <div class="drpdwn">
+                <img src="assets/bx-menu.svg" alt="">
+                <ul class="drpitm">
+                    <li>
+                        <h5>Home</h5>
+                    </li>
+                    <li>
+                        <h5>About</h5>
+                    </li>
+                    <li>
+                        <h5>Facilities</h5>
+                    </li>
+                    <li>
+                        <h5>Admission</h5>
+                    </li>
+                    <li>
+                        <h5>Contact</h5>
+                    </li>
+                </ul>
+            </div>
         </div>
     </header>
+    <div style="background-color: orange; height: 1px; margin: 0 -10vw;"></div>
     <!-- navbar finish -->
 
     <!-- hero section  -->
