--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             </div>
 
             <div class="navbtn">
-                <button style="color: orange;">Home</button>
-                <button style="color: #01ACFD;">About</button>
-                <button style="color: aqua;">Facilities</button>
-                <button style="color: blueviolet;">Admission</button>
+                <button id="btn1" style="color: orange;">Home</button>
+                <button id="btn2" style="color: #01ACFD;">About</button>
+                <button id="btn3" style="color: aqua;">Facilities</button>
+                <button id="btn4" style="color: blueviolet;">Admission</button>
             </div>
 
             <div class="org_pmrybtn">
@@ -49,7 +49,7 @@
             </div>
         </div>
     </header>
-    <div style="background-color: orange; height: 1px; margin: 0 -10vw;"></div>
+    <!-- <div style="background-color: orange; height: 1px; margin: 0 -10vw;"></div> -->
     <!-- navbar finish -->
 
     <!-- hero section  -->
@@ -78,27 +78,21 @@
             border: 1px solid #DEF5FF;">
                 <img src="assets/kinder.png" alt="">
                 <h3>Kinder (3-6) Years</h3>
-                <p>Cum sociis natoque penatibus et magnis
-                    dis parturient montes, nascetur ridiculus
-                    mu sdis parturient</p>
+                <p>Fostering creativity, curiosity, and social skills through engaging and interactive learning activities.</p>
                 <button style="color: #01ACFD;">Read More</button>
             </div>
             <div class="crd" style="background: linear-gradient(rgb(255, 244, 220), rgba(222, 245, 255, 0), rgba(222, 245, 255, 0));
             border: 1px solid #FFF4DC;">
                 <img src="assets/elementary.png" alt="">
                 <h3 style="margin: 5% 0 10%;">Elementary School</h3>
-                <p>Cum sociis natoque penatibus et magnis
-                    dis parturient montes, nascetur ridiculus
-                    mu sdis parturient</p>
+                <p>Building strong foundations in academics, critical thinking, and collaborative problem-solving skills.</p>
                 <button style="color: #F0AA00;">Read More</button>
             </div>
             <div class="crd" style="background: linear-gradient(rgb(238, 225, 255), rgba(222, 245, 255, 0), rgba(222, 245, 255, 0));
             border: 1px solid #EEE1FF;">
                 <img src="assets/middle.png" alt="">
                 <h3>Middle (10-16) Years</h3>
-                <p>Cum sociis natoque penatibus et magnis
-                    dis parturient montes, nascetur ridiculus
-                    mu sdis parturient</p>
+                <p>Empowering students with advanced knowledge, creativity, and leadership for future success.</p>
                 <button style="color: #8700FF;">Read More</button>
             </div>
         </div>
@@ -164,8 +158,7 @@
             <h2>Kids <br> Education</h2>
         </div>
         <div id="n1">
-            <p>Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie.
-                Mayo rib sauce Hawaiian meatball.</p>
+            <p>Our mission is to nurture young minds by fostering creativity, curiosity, and confidence. We provide a safe and supportive environment where children explore, learn, and grow.</p>
         </div>
         <div class="fabout">
             <h3>About School</h3>
