add marquee text fix footer on mobile view and add a line in bottom of header and fix some minur bugs

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             </div>
 
             <div class="navbtn">
-                <button id="btn1" style="color: orange;">Home</button>
-                <button id="btn2" style="color: #01ACFD;">About</button>
-                <button id="btn3" style="color: aqua;">Facilities</button>
-                <button id="btn4" style="color: blueviolet;">Admission</button>
+                <a href="index.html"><button id="btn1" style="color: orange;">Home</button></a>
+                <a href="index.html"><button id="btn2" style="color: #01ACFD;">About</button></a>
+                <a href="index.html"><button id="btn3" style="color: aqua;">Facilities</button></a>
+                <a href="index.html"><button id="btn4" style="color: blueviolet;">Admission</button></a>
             </div>
 
             <div class="org_pmrybtn">
@@ -49,7 +49,7 @@
             </div>
         </div>
     </header>
-    <!-- <div style="background-color: orange; height: 1px; margin: 0 -10vw;"></div> -->
+    <div id="brdbtm" style="background-color: orange; height: 1px; margin: 0 -3vw;"></div>
     <!-- navbar finish -->
 
     <!-- hero section  -->
@@ -79,21 +79,21 @@
                 <img src="assets/kinder.png" alt="">
                 <h3>Kinder (3-6) Years</h3>
                 <p>Fostering creativity, curiosity, and social skills through engaging and interactive learning activities.</p>
-                <button style="color: #01ACFD;">Read More</button>
+                <a href="index.html"><button style="color: #01ACFD;">Read More</button></a>
             </div>
             <div class="crd" style="background: linear-gradient(rgb(255, 244, 220), rgba(222, 245, 255, 0), rgba(222, 245, 255, 0));
             border: 1px solid #FFF4DC;">
                 <img src="assets/elementary.png" alt="">
                 <h3 style="margin: 5% 0 10%;">Elementary School</h3>
                 <p>Building strong foundations in academics, critical thinking, and collaborative problem-solving skills.</p>
-                <button style="color: #F0AA00;">Read More</button>
+                <a href="index.html"><button style="color: #F0AA00;">Read More</button></a>
             </div>
             <div class="crd" style="background: linear-gradient(rgb(238, 225, 255), rgba(222, 245, 255, 0), rgba(222, 245, 255, 0));
             border: 1px solid #EEE1FF;">
                 <img src="assets/middle.png" alt="">
                 <h3>Middle (10-16) Years</h3>
                 <p>Empowering students with advanced knowledge, creativity, and leadership for future success.</p>
-                <button style="color: #8700FF;">Read More</button>
+                <a href="index.html"><button style="color: #8700FF;">Read More</button></a>
             </div>
         </div>
         <div class="arwbtn">
@@ -101,6 +101,7 @@
             <img src="assets/Button-icon.svg" alt="">
         </div>
     </section>
+    <marquee class="scrltxt" scrollamount="12" behavior="scroll" direction="left">Welcome to our school, where students learn, grow, and achieve every day!</marquee>
     <!-- curriculum finish  -->
 
     <!-- Our story section  -->
@@ -146,13 +147,13 @@
                     <!-- <p></p> -->
                 </div>
             </div>
-            <button class="blk_pmrybtn">View All</button>
+            <button style=" margin: 5% 0 4%;" class="blk_pmrybtn">View All</button>
         </div>
     </section>
     <!-- our story section finish  -->
 
     <!-- footer section  -->
-    <footer class="footer">
+    <footer class="footer"><a></a>
         <div class="flogo">
             <img src="assets/logo.png" alt="">
             <h2>Kids <br> Education</h2>
@@ -164,10 +165,10 @@
             <h3>About School</h3>
         </div>
         <div id="n2">
-            <h4>Home</h4>
-            <h4>About</h4>
-            <h4>Facilities</h4>
-            <h4>Admission</h4>
+            <a href="index.html"><h4>Home</h4></a>
+            <a href="index.html"><h4>About</h4></a>
+            <a href="index.html"><h4>Facilities</h4></a>
+            <a href="index.html"><h4>Admission</h4></a>
         </div>
         <div class="ftouch">
             <h3>Keep In Touch</h3>
